name:                   shapefile-utils
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                Unspecified
homepage:               /dev/null

category:               Unclassified
synopsis:               Odd little utilities related to shape files
description:            Odd little utilities related to shape files

Executable shp2shx
  hs-source-dirs:       src
  main-is:              ShpToShx.hs
  build-depends:        base >= 3, filepath, shapefile
