name:                   shapefile-utils
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               Odd little utilities related to shape files
description:            Odd little utilities related to shape files

source-repository head
  type: git
  location: git://github.com/mokus0/shapefile-utils.git

Executable shp2shx
  hs-source-dirs:       src
  main-is:              ShpToShx.hs
  build-depends:        base >= 3 && < 5, filepath, shapefile
